k8s/deployment-gaiax.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gaiax-portal-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gaiax-portal-backend
  template:
    metadata:
      labels:
        app: gaiax-portal-backend
      annotations:
        deployment/id: "_DEFAULT_DEPLOYMENT_"
    spec:
      containers:
        - name: gaiax-portal-backend
          image: waltid/gaiax-portal-backend:_VERSION_TAG_
          volumeMounts:
            - name: wallet-config
              mountPath: "/waltid/wallet/config/"
              readOnly: true
            - mountPath: "/waltid/wallet/data/"
              name: wallet-data
          ports:
            - containerPort: 8080
              name: http-api
      volumes:
        - name: wallet-config
          configMap:
            name: wallet-config
        - name: wallet-data
          persistentVolumeClaim:
            claimName: wallet-data-volume-claim
---
kind: Service
apiVersion: v1
metadata:
  name: gaiax-portal-backend
spec:
  ports:
    - name: http
      port: 80
      targetPort: http-api
      protocol: TCP
  selector:
    app: gaiax-portal-backend
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gaiax-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gaiax-portal
  template:
    metadata:
      labels:
        app: gaiax-portal
      annotations:
        deployment/id: "_DEFAULT_DEPLOYMENT_"
    spec:
      containers:
        - name: ssikit-verifier-portal
          image: waltid/gaiax-portal:_VERSION_TAG_
          ports:
            - containerPort: 80
              name: http-api
---
kind: Service
apiVersion: v1
metadata:
  name: gaiax-portal
spec:
  ports:
    - name: http
      port: 80
      targetPort: http-api
      protocol: TCP
  selector:
    app: gaiax-portal
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gaiax-portal-backend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - gaiax-portal.walt.id
      secretName: wallet-tls-secret
  rules:
    - host: gaiax-portal.walt.id
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: gaiax-portal-backend
                port:
                  number: 80
          - path: /verifier-api/
            pathType: Prefix
            backend:
              service:
                name: gaiax-portal-backend
                port:
                  number: 80
          - path: /webjars
            pathType: Prefix
            backend:
              service:
                name: gaiax-portal-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gaiax-portal
                port:
                  number: 80
